<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.didact.u2_ej21_actcb_rb_sppiner.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:background="@drawable/trama"></LinearLayout>

    <Spinner
        android:id="@+id/sp_tipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btn_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/boton1"

            android:onClick="boton1"
            android:background="@drawable/botonfondo"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5" />

        <Button
            android:id="@+id/btn_resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/boton2"

            android:onClick="boton2"
            android:enabled="false"
            android:background="@drawable/botonfondo"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_pregunta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv1"
                    android:textSize="20dp"
                    android:layout_margin="10dp"/>

                <RadioGroup
                    android:id="@+id/rg_respuestas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp">

                    <RadioButton
                        android:id="@+id/rb_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rb_100" />

                    <RadioButton
                        android:id="@+id/rb_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rb_50" />

                    <RadioButton
                        android:id="@+id/rb_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rb_200" />
                </RadioGroup>
            </LinearLayout>
        </ScrollView>

        <CheckBox
            android:id="@+id/cb_pregunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:text="@string/cb_pregunta" />

    </RelativeLayout>

</LinearLayout>
